--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
+    "@types/pg": "^8.15.5",
     "commitizen": "^4.3.1",
     "commitlint": "^19.8.1",
     "husky": "^9.1.7",
