refactor(config): Set aliases for the ./dist directories to make short imports

--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "type": "module",
   "homepage": "",
   "private": true,
+  "imports": {
+    "#root/*": "./dist/*",
+    "#features/*": "./dist/features/*",
+    "#lib/*": "./dist/lib/*",
+    "#routes/*": "./dist/routes/*"
+  },
   "author": {
     "name": "",
     "email": "",
