--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
