--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express-rate-limit": "^8.0.1",
     "pg": "^8.16.3",
     "rate-limit-redis": "^4.2.1",
+    "winston": "^3.17.0",
     "zod": "^4.0.15"
   },
   "devDependencies": {
