refactor(project): refactor main.ts (the entry point of the project)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "#root/*": "./dist/*",
     "#features/*": "./dist/features/*",
     "#lib/*": "./dist/lib/*",
-    "#routes/*": "./dist/routes/*"
+    "#routes/*": "./dist/routes/*",
+    "#middlewares/*": "./dist/middlewares/*"
   },
   "author": {
     "name": "Abdelrahman Emad",
