--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "helmet": "^8.1.0",
     "pg": "^8.16.3",
     "rate-limit-redis": "^4.2.1",
+    "redis": "^5.8.1",
     "winston": "^3.17.0",
     "zod": "^4.0.15"
   },
