feat(auth): implement login, register, verify
- implement the logic of login/register with email and password
- implement the logic of email address verification endpoint

--- a/package.json
+++ b/package.json
@@ -40,14 +40,19 @@
   "dependencies": {
     "@sentry/node": "^10.5.0",
     "@types/compression": "^1.8.1",
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "compression": "^1.8.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "express-session": "^1.18.2",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
-    "rate-limit-redis": "^4.2.1",
+    "rate-limit-redis": "^4.2.2",
     "redis": "^5.8.1",
     "winston": "^3.17.0",
     "zod": "^4.0.15"
@@ -55,8 +60,12 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
+    "@types/nodemailer": "^7.0.0",
     "@types/pg": "^8.15.5",
     "commitizen": "^4.3.1",
     "commitlint": "^19.8.1",
