setup(project): setup the frontend project
- setup the theme
- setup the file structure
- add the home page

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -13,16 +13,19 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": "./src",
     "plugins": [
       {
         "name": "next"
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["*"],
+      "@/styles/*": ["styles/*"],
+      "@/components/*": ["components/*"],
+      "@/features/*": ["features/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "extends": "../../tsconfig.json",
   "exclude": ["node_modules"]
 }
