--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "extends": "../../tsconfig.json",
   "include": ["src"],
+  "exclude": ["node_modules", "dist"],
   "compilerOptions": {
     "outDir": "./dist",
-    "baseUrl": "./src",
+    "baseUrl": "src",
+    "rootDir": "./src",
     "paths": {
-      "#root/*": ["./*"],
+      "#root/*": ["*"],
       "#features/*": ["features/*"],
       "#lib/*": ["lib/*"],
       "#routes/*": ["routes/*"],
