--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -30,6 +30,7 @@
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-table": "^8.21.3",
     "@types/swagger-ui-react": "^5.18.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
