--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "Short URL",
     "Long URL"
   ],
+  "workspaces": [
+    "apps/*"
+  ],
   "license": "MIT",
   "dependencies": {
     "dotenv": "^17.2.1",
