--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 3002",
-    "build": "next build",
+    "build": "pnpm build:deps && next build",
+    "build:deps": "pnpm --filter @mukhtasar/shared run tsc",
     "start": "next start -p 3002",
     "lint": "next lint"
   },
