fix(config): fix config for backend deployment

--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -15,5 +15,8 @@
       "types": "./dist/main.d.ts"
     }
   },
+  "devDependencies": {
+    "typescript": "^5.8.3"
+  },
   "author": "Abdulrahman Emad"
 }
