--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
     "zod": "^4.0.15"
   },
   "devDependencies": {
-    "@types/node": "^20",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@types/node": "^20",
     "commitizen": "^4.3.1",
     "commitlint": "^19.8.1",
-    "husky": "^9.1.7"
+    "husky": "^9.1.7",
+    "rimraf": "^6.0.1"
   }
 }
