--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -7,7 +7,7 @@
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "scripts": {
-    "build": "rimraf dist && tsc"
+    "build": "tsc --build --clean && tsc"
   },
   "exports": {
     ".": {
