--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "main": "./dist/main.js",
   "scripts": {
-    "build": "pnpm -r build",
+    "build": "which pnpm && pnpm --version && pnpm -r build",
     "dev:backend": "pnpm --filter @mukhtasar/backend dev",
     "dev:frontend": "pnpm --filter @mukhtasar/frontend dev",
     "dev": "pnpm dev:backend & pnpm dev:frontend",
