fix(frontend): update routes

--- a/apps/worker/wrangler.jsonc
+++ b/apps/worker/wrangler.jsonc
@@ -3,7 +3,8 @@
 	"main": "src/index.js",
 	"compatibility_date": "2025-08-29",
 	"routes": [
-		"mukhtasar.pro/*"
+		"mukhtasar.pro/*",
+		"www.mukhtasar.pro/*"
 	],
 	"observability": {
 		"enabled": true
